<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_nav_dashboard"
            android:title="@string/menu_dashboard" />
        
        <item
            android:id="@+id/nav_customers"
            android:icon="@drawable/ic_nav_customers"
            android:title="@string/menu_my_customers" />

        <item
            android:id="@+id/nav_join_requests"
            android:icon="@drawable/ic_nav_requests"
            android:title="@string/menu_join_requests" />

        <item
            android:id="@+id/nav_complaints"
            android:icon="@drawable/ic_email_24"
            android:title="@string/menu_complaints" />

        <item
            android:id="@+id/nav_quantity_requests"
            android:icon="@drawable/ic_nav_requests"
            android:title="@string/menu_quantity_requests" />

        <item
            android:id="@+id/nav_service_entry"
            android:icon="@drawable/ic_nav_service"
            android:title="@string/menu_service_entry" />

        <item
            android:id="@+id/nav_bills"
            android:icon="@drawable/ic_nav_bills"
            android:title="@string/menu_bills" />

        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_nav_reports"
            android:title="@string/menu_reports" />

        <item
            android:id="@+id/nav_route"
            android:icon="@drawable/ic_route_path"
            android:title="@string/menu_delivery_route" />

        <item
            android:id="@+id/nav_sales"
            android:icon="@drawable/ic_trending_up"
            android:title="@string/menu_sales_prediction" />

    </group>

    <item android:title="@string/menu_group_account">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_nav_profile"
                android:title="@string/menu_my_profile" />

            <item
                android:id="@+id/nav_qr_code"
                android:icon="@drawable/ic_nav_qr"
                android:title="@string/menu_my_qr_code" />
        </menu>
    </item>

    <item android:title="@string/menu_group_settings">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_nav_share"
                android:title="@string/menu_share_app" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_nav_logout"
                android:title="@string/action_logout" />
        </menu>
    </item>

</menu>
